fix table column header alignment [CH-7]

--- a/app/assets/stylesheets/query_logs.scss
+++ b/app/assets/stylesheets/query_logs.scss
@@ -4,5 +4,6 @@
   th:not(:first-of-type),
   td:not(:first-of-type) {
     padding-left: 50px;
+    text-align: left;
   }
 }
